HID Device: Create user app to Test HID device
Implelemnt HID device test app to perform
typical use cases of HID device.

Crs-Fixed: 2912356
Change-Id: I6f133ca56dbf06dd5c65e56ad9452354f0af173e

--- a/bttestapp/res/layout/activity_main.xml
+++ b/bttestapp/res/layout/activity_main.xml
@@ -119,6 +119,13 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="showHidDevice"
+        android:text="@string/showHidDevice"
+        android:layout_marginLeft="@dimen/activity_base_margin"
+        android:layout_marginRight="@dimen/activity_base_margin"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:onClick="showHidHost"
         android:text="@string/showHidHost"
         android:layout_marginLeft="@dimen/activity_base_margin"
