--- a/bttestapp/res/values/dimens.xml
+++ b/bttestapp/res/values/dimens.xml
@@ -34,4 +34,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="activity_base_margin">5dp</dimen>
+    <dimen name="margin_basic">10dp</dimen>
+    <dimen name="margin_min">2dp</dimen>
+
 </resources>
