--- a/bttestapp/res/values/styles.xml
+++ b/bttestapp/res/values/styles.xml
@@ -86,4 +86,19 @@
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:padding">10dp</item>
     </style>
+
+    <style name="keyboard_led">
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="custom_style" parent="Theme.MaterialComponents.DayNight.DarkActionBar"/>
+
 </resources>
